<resources>
    <string name="app_name">ViewIt!</string>
    <string name="action_about">About</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_storage_neverask">Never ask for storage permission</string>
    <string name="msg_scan_completed_with_images">%1$d images shown, %2$d filtered:)</string>
    <string name="msg_scan_completed_without_image">Scan completed, but no image found:(</string>
    <string name="msg_scanning_image">Scanning…</string>
    <string name="msg_scan_failed">:(\nAn error occurred:%1$s</string>
    <string name="action_detail">View Detail</string>
    <string name="viewer_action_error">:(\nAn error occurred: %1$s</string>
    <string name="snack_action_open_saved_image">View</string>
    <string name="action_sort">Sort</string>
    <string name="action_view_app_info">Application Detail</string>
    <string name="delete_anyway">Delete Anyway</string>
    <string name="msg_delete_image_failed">delete image failed</string>
    <string name="msg_delete_image_success">delete image success</string>
    <string name="msg_save_image_failed_without_sdcard">no sdcard</string>
    <string name="msg_warning_delete_image">Notice!!! It will maybe make %1$s not working</string>
    <string name="title_share_image">Share with</string>
    <string name="title_warning_delete_image">️Warning⚠️</string>
    <string name="toast_save_image_success">Image saved at:%1$s</string>
    <string name="action_sort_by_default">By path</string>
    <string name="action_sort_by_size">By size</string>
    <string name="action_sort_by_time">By Time</string>
    <string name="action_filter_size">过滤文件</string>
    <string name="action_filter_30K">小于30K</string>
    <string name="action_filter_100K">小于100K</string>
    <string name="action_filter_300K">小于300K</string>
    <string name="action_filter_none">不过滤</string>
    <string name="subtitle_scanned_images">%1$d Images</string>
    <string name="subtitle_displayed_images">%1$d/%2$d Images</string>
    <string name="image_not_found">No Image</string>
    <string name="about_introduce_content">平时我们在使用 APP 时会看到很多图片，但总有一部分图片不能保存或者导出，这时候就需要「看应用」来帮你了。\n\n它可以找到应用下载的所有图片，并且可以将其归类，方便你找到诸如微信表情、好友头像之类的图片\n\n看应用是我业余独立开发的免费应用，如果你喜欢，可以进行打赏支持，非常感谢！！</string>
    <string name="about_header_introduce">介绍与帮助</string>
    <string name="about_action_donate">打赏</string>
    <string name="about_title">看应用 —— 图片还可以这么找！</string>
    <string name="share_content">Hi，分享一款应用：「看应用」\n\n它可以帮你找到应用下载的所有图片，它还可以帮你归类这些图片方便查找，比如微信表情、好友头像、拍照等等\n\n推荐：http://fir.im/viewIt</string>
    <string name="action_share_app">分享「看应用」给你的朋友</string>

    <string name="path_format_root">根目录</string>
    <string name="path_format_sdcard">SDCard</string>
    <string name="path_format_external_data">外部数据</string>
    <string name="path_format_internal_data">内部数据</string>

    <string name="label_category_tree">目录</string>
    <string name="label_category_recommend">推荐</string>
    <string name="label_category_favorite">收藏</string>
    <string name="label_category_tree_images">有 %1$d 张图片</string>
    <string name="label_category_tree_images_with_filter">有%1$d / %2$d 张图片</string>
    <string name="label_category_action_filter">过滤了 %1$d 张</string>
    <string name="label_category_action_all_images">全部图片(%1$d 张)</string>
    <string name="label_category_action_scroll_to_images">查看图片↓</string>
    <string name="subtitle_scanning">扫描中…</string>
    <string name="label_images_count">%1$d 张</string>
    <string name="msg_create_favorite_success">收藏成功</string>
    <string name="action_delete_favorite">移除这个收藏</string>
    <string name="action_create_favorite">收藏这个目录</string>
    <string name="action_save_favorite">保存</string>
    <string name="alert_delete_favorite">确定要删除这个收藏吗?</string>
    <string name="title_dialog_create_favorite">收藏这个目录</string>
    <string name="label_favorite_name">起个名字</string>
    <string name="label_create_favorite_check_share">匿名收集</string>
    <string name="action_launch_app">打开应用</string>
    <string name="msg_operate_success">操作成功</string>
    <string name="action_gallery_setting">设置扫描目录</string>
    <string name="title_activity_path_manager">管理扫描路径</string>
    <string name="category_built_in_path">预置</string>
    <string name="category_local_path">保存的</string>
    <string name="category_cloud_path">推荐</string>
    <string name="action_delete_path">删除</string>
    <string name="action_add_path">添加扫描路径</string>
    <string name="msg_save_picked_path_succeed">保存成功</string>
    <string name="action_edit_path">编辑</string>
    <string name="title_dialog_confirm_delete_path">确定要删除这个路径吗?</string>
    <string name="msg_operation_succeed">操作成功</string>
    <string name="msg_operation_failed">操作失败:(</string>
    <string name="action_finish">完成</string>
    <string name="category_top_usage_app">常用</string>
    <string name="category_other_app">其他</string>
    <string name="title_dialog_image_detail">图片详情</string>
    <string name="error_open_alipay">打开支付宝失败:(\\n你可以联系我:linroid@gmail.com</string>
    <string name="feedback">反馈</string>
    <string name="btn_add_path">手动添加扫描路径</string>
    <string name="tips_to_add_path_no_root">「看应用」在扫描应用内部数据的时候需要 root 权限，但您的设备并没有 root:(</string>
    <string name="tips_to_add_path_no_image">「看应用」没有扫描到图片，可以试试手动添加扫描路径~</string>
    <string name="title_dialog_require_root_prompt">需要 root 权限</string>
    <string name="msg_dialog_no_root">「看应用」在扫描应用内部数据的时候需要 root 权限，检测到您的设备并没有 root，不过它依然可以扫描到部分图片，您也可以手动添加扫描路径来扫描更多的图片</string>
    <string name="msg_dialog_require_root">「看应用」需要请求 root 权限才能扫描到应用的内部数据，否则只能扫描到一部分图片哦~</string>
    <string name="action_select_all">全选</string>
    <string name="action_unselect_all">全不选</string>
    <string name="msg_batch_save_image_success">成功保存了 %1$d 张图片:)</string>
    <string name="msg_batch_delete_image_success">成功删除了 %1$d 张图片:)</string>
    <string name="msg_warning_batch_delete_image">删除这些图片(共%1$d张)可能导致「%2$s」运行异常，请谨慎操作!</string>
    <string name="msg_require_select_image">请选择至少一张图片</string>
    <string name="action_search">搜索应用</string>
    <string name="category_search_app">搜索</string>
    <string name="msg_batch_saving_image">保存中...</string>
    <string name="msg_batch_deleting_image">删除中...</string>
</resources>
