<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_default"
                    android:title="@string/action_sort_by_default">
                </item>
                <item
                    android:id="@+id/action_sort_by_size"
                    android:title="@string/action_sort_by_size"/>
                <item
                    android:id="@+id/action_sort_by_time"
                    android:title="@string/action_sort_by_time"/>
            </group>
        </menu>

    </item>
    <item
        android:id="@+id/action_view_app_info"
        android:title="@string/action_view_app_info"
        app:showAsAction="never"/>
</menu>